// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a single image 1`] = `
<Fragment>
  <div
    data-stylename="image"
  >
    <img
      alt="Attached image 1"
      data-index={0}
      onClick={[Function]}
      src="foo"
    />
    <div
      data-stylename="others"
    >
      <div
        data-stylename="others-inner"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders multiple images 1`] = `
<Fragment>
  <div
    data-stylename="image"
  >
    <img
      alt="Attached image 1"
      data-index={0}
      onClick={[Function]}
      src="bar"
    />
    <div
      data-stylename="others"
    >
      <div
        data-stylename="others-inner"
      >
        <img
          alt="Attached image 2"
          data-index={1}
          data-stylename="other"
          key="0"
          onClick={[Function]}
          src="baz"
        />
        <img
          alt="Attached image 3"
          data-index={2}
          data-stylename="other"
          key="1"
          onClick={[Function]}
          src="bonk"
        />
      </div>
    </div>
  </div>
</Fragment>
`;
